# zotcurate

./: MOTIVATION.md  README.md  examples.md  pyproject.toml
src/zotcurate/: __init__.py  betterbibtex.py  cli.py  config.py  detect.py  extractors.py  formatters.py  zotero_api.py  zotero_db.py
src/zotcurate/commands/: collection_manage.py  collections_list.py  config.py  keys_extract.py  keys_list.py
src/zotcurator/: betterbibtex.py  cli.py  config.py  extractors.py  formatters.py  log.py  zotero_api.py
src/zotcurator/commands/: __init__.py  collection_manage.py  collections_list.py  keys_extract.py  keys_list.py
