[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zotcurator"
version = "0.1.0"
description = "Zotero collection curation utility"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
zotc = "zotcurator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
